# myrzakhanov_m_a

./: CMakeLists.txt  README.md
bin.rel/: lab01.report.md
prj.labs/: CMakeLists.txt
prj.labs/kr/: CMakeLists.txt  kr.cpp  kr.report.md.in.txt
prj.labs/lab01/: lab01.cpp
prj.labs/lab02/: lab02.cpp
